<resources>
    <string name="app_name">News Duniya</string>

    <string name="toolbar_title_home">Home</string>
    <string name="action_settings">Settings</string>
    <string name="toolbar_title_home_ab_en">About</string>

    <!-- Toolbar titles -->
    <string name="toolbar_title_home_vk">ವಿಜಯ ಕರ್ನಾಟಕ</string>
    <string name="toolbar_title_home_an">ಸುವರ್ಣ</string>
    <string name="toolbar_title_home_uv">ಉದಯವಾಣಿ</string>
    <string name="toolbar_title_home_pj">ಪ್ರಜಾವಾಣಿ</string>
    <string name="toolbar_title_home_vv">ವಿಜಯವಾಣಿ</string>
    <string name="toolbar_title_home_es">ಈ ಸಂಜೆ</string>
    <string name="toolbar_title_home_dh">Deccan Herald</string>
    <string name="toolbar_title_home_ht">Hindustan Times</string>
    <string name="toolbar_title_home_dna">DNA</string>
    <string name="toolbar_title_home_ie">Indian Express</string>
    <string name="toolbar_title_home_aajtak">आज तक</string>
    <string name="toolbar_title_home_ndtv">एन.डी.टी.वी</string>
    <string name="toolbar_title_home_jagaran">जागरण</string>
    <string name="toolbar_title_home_bbc">बी.बी.सी</string>

    <string name="toolbar_title_home_vk_en">VijayaKarnataka</string>
    <string name="toolbar_title_home_an_en">Suvarna</string>
    <string name="toolbar_title_home_uv_en">Udayavani</string>
    <string name="toolbar_title_home_pj_en">Prajavani</string>
    <string name="toolbar_title_home_vv_en">Vijayavani</string>
    <string name="toolbar_title_home_es_en">EeSanje</string>
    <string name="toolbar_title_home_top10">Top_Ten</string>


    <string name="rate_dialog_title">Share your experience☺</string>
    <string name="rate_dialog_message">If you enjoy using News Duniya, would you mind taking a moment to rate us.(5 would be appreciable)? It won\'t take more than a minute. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate It Now</string>
    <string name="rate_dialog_cancel">Remind Me Later</string>
    <string name="rate_dialog_no">No, Thanks</string>


    <string name="headlines_vk_en">Headlines_VK</string>
    <string name="sports_vk_en">Sports_VK</string>
    <string name="cinema_vk_en">Cinema_VK</string>
    <string name="technology_vk_en">Technology_VK</string>
    <string name="lifestyle_vk_en">Lifestyle_VK</string>


    <string name="headlines_kn">ಮುಖ್ಯಾಂಶಗಳು</string>
    <string name="state_kn">ರಾಜ್ಯ</string>
    <string name="sports_kn">ಕ್ರೀಡೆ</string>
    <string name="national_kn">ದೇಶ</string>
    <string name="cinema_kn">ಸಿನಿಮಾ</string>
    <string name="business_kn">ವಾಣಿಜ್ಯ</string>
    <string name="technology_kn">ತಂತ್ರಜ್ಞಾನ</string>
    <string name="world_kn">ಜಗತ್ತು</string>
    <string name="lifestyle_kn">ಲೈಫ್‌ಸ್ಟೈಲ್</string>
    <string name="politics_kn">ರಾಜಕೀಯ</string>
    <string name="tagline">ನಮ್ಮ ನಾಡು ನಮ್ಮ ಧ್ವನಿ</string>
    <string name="exclusive_tagline">You usually have to wait for that which is worth Reading</string>
    <string name="defaultDash">- -</string>


    <string name="other_activity">Other Activity</string>

    <!-- Navigation Drawer -->
    <string name="nav_drawer_item_home">Home</string>
    <string name="nav_drawer_item_explore">Explore</string>
    <string name="nav_drawer_help_and_feedback"><![CDATA[Help & feedback]]></string>
    <string name="nav_drawer_about">About</string>
    <string name="navigation_drawer_opened">The navigation drawer is opened</string>
    <string name="navigation_drawer_closed">The navigation drawer is closed</string>
    <string name="tag_nav_drawer_main_entry">nav_drawer_main_entry</string>
    <string name="tag_nav_drawer_special_entry">nav_drawer_special_entry</string>
    <string name="tools_text_account_information_username">Username</string>
    <string name="tools_text_account_information_email">user@mail.com</string>

    <!-- Typeface names -->
    <string name="typeface_roboto_regular">Roboto-Regular</string>
    <string name="typeface_roboto_medium">Roboto-Medium</string>


    <string name="media_url_mp3"></string>
    <string name="media_url_mp4"></string>
    <string name="media_url_dash"></string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
