<?xml version="1.0" encoding="utf-8"?>

<vadeworks.news.paperdroids.app_skeleton.customViews.ScrimInsetsFrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity_navigation_drawer_rootLayout"
    style="@style/ScrimInsetsLayout">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <FrameLayout
            android:id="@+id/navigation_drawer_account_view"
            android:layout_width="match_parent"
            android:layout_height="@dimen/navigation_drawer_account_section_default_height"
            android:clickable="true"
            android:foreground="?selectableItemBackground"
            tools:layout_height="@dimen/navigation_drawer_account_section_default_height">

            <FrameLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:foreground="@color/black_alpha_50">

                <com.android.volley.toolbox.NetworkImageView
                    android:id="@+id/navigation_drawer_user_account_picture_cover"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@drawable/nav_image"
                    android:scaleType="centerCrop"
                    tools:ignore="ContentDescription" />

            </FrameLayout>

            <RelativeLayout
                android:id="@+id/navigation_drawer_account_section"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
                android:layout_gravity="center">

                <LinearLayout
                    android:id="@+id/navigation_drawer_account_information"
                    android:layout_width="wrap_content"
                    android:layout_height="@dimen/navigation_drawer_account_information_height"
                    android:layout_centerHorizontal="true"
                    android:layout_alignParentBottom="true"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/navigation_drawer_account_information_display_name"
                        style="@style/NavDrawerAccountInfoText"
                        android:layout_gravity="center"
                        android:gravity="center"
                        android:textSize="18sp"
                        android:text="@string/app_name"
                        tools:fontFamily="sans-serif-medium"/>

                </LinearLayout>

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/navigation_drawer_user_account_picture_profile"
                    android:layout_width="@dimen/navigation_drawer_profile_image_size"
                    android:layout_height="@dimen/navigation_drawer_profile_image_size"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:layout_above="@id/navigation_drawer_account_information"
                    android:src="@drawable/logo" />

            </RelativeLayout>

        </FrameLayout>

        <!-- Drawer items -->
        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/navigation_drawer_background"
            android:clipToPadding="false"
            android:paddingBottom="@dimen/nav_drawer_vertical_spacing_listing"
            android:paddingTop="@dimen/nav_drawer_vertical_spacing_listing">

            <LinearLayout
                android:id="@+id/navigation_drawer_linearLayout_entries_root_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/nav_home"
                    style="@style/NavDrawerRowLayout.Main">

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_home"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_home_white_24dp"
                        tools:ignore="ContentDescription"
                        tools:tint="@color/nav_drawer_item_icon_selected" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_home"
                        style="@style/NavDrawerRowItemText"
                        android:text="Home"
                        tools:fontFamily="sans-serif-medium"
                        tools:textColor="@color/nav_drawer_item_text_selected"/>

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/nav_prajavani"
                    style="@style/NavDrawerRowLayout.Main" >

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_explore"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_explore_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_explore"
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/toolbar_title_home_pj"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/nav_vijayavani"
                    style="@style/NavDrawerRowLayout.Main" >

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView

                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_explore_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView

                        style="@style/NavDrawerRowItemText"
                        android:text="@string/toolbar_title_home_vv"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/nav_vijayakarnataka"
                    style="@style/NavDrawerRowLayout.Main" >

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_explore_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/toolbar_title_home_vk"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/nav_udayavaani"
                    style="@style/NavDrawerRowLayout.Main" >

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_explore_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/toolbar_title_home_uv"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>

                <FrameLayout
                    android:id="@+id/nav_suvarna"
                    style="@style/NavDrawerRowLayout.Main" >

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_explore_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/toolbar_title_home_an"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>


                <FrameLayout
                    android:id="@+id/nav_esanje"
                    style="@style/NavDrawerRowLayout.Main" >

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_explore_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        style="@style/NavDrawerRowItemText"
                        android:text="@string/toolbar_title_home_es"
                        tools:fontFamily="sans-serif-medium"/>

                </FrameLayout>



                <include
                    layout="@layout/navigation_drawer_divider"/>

                <FrameLayout
                    android:id="@+id/nav_about"
                    style="@style/NavDrawerRowLayout.Secondary">

                    <vadeworks.news.paperdroids.app_skeleton.customViews.TintOnStateImageView
                        android:id="@+id/navigation_drawer_items_list_icon_help_and_feedback"
                        style="@style/NavDrawerRowItemIcon"
                        android:src="@drawable/ic_help_white_24dp"
                        tools:ignore="ContentDescription" />

                    <TextView
                        android:id="@+id/navigation_drawer_items_textView_help_and_feedback"
                        style="@style/NavDrawerRowItemText"
                        android:text="About"
                        tools:fontFamily="sans-serif-medium" />

                </FrameLayout>


            </LinearLayout>

        </ScrollView>

    </LinearLayout>

</vadeworks.news.paperdroids.app_skeleton.customViews.ScrimInsetsFrameLayout>